formatting and spelling fix

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 	        IdentityPoolId: IDENTITY_POOL_ID,
 	    });
 
-	    // Need to provide placeholder keys unless unauthorised user access is enabled for user pool
-	   // AWSCognito.config.update({accessKeyId: 'anything', secretAccessKey: 'anything'})
+	    // Need to provide placeholder keys unless unauthorized user access is enabled for user pool
+	    // AWSCognito.config.update({accessKeyId: 'anything', secretAccessKey: 'anything'})
 
 	    var poolData = {
 	        UserPoolId : USER_POOL_ID,
